# claude-code-tray

./: README.md  claude-monitor.py  claude-send.py  claude-tui.py  dashboard.py  install.sh  justfile  pyproject.toml  settings.hooks.json  test_claude_monitor.py
.claude/: CLAUDE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  active-workstream  config.json  v1.4-MILESTONE-AUDIT.md
.planning/codebase/: OVERVIEW.md
.planning/debug/: stale-session-status-stuck.md
.planning/milestones/: v1.2-REQUIREMENTS.md
.planning/phases/01-usage-quota-monitoring-in-the-tray/: 01-01-SUMMARY.md  01-REVIEW-FIX.md  01-UAT.md
.planning/phases/02-usage-history-persistence/: 02-01-SUMMARY.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-usage-trends-in-the-tray/: 03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-usage-web-dashboard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-DISCUSSION-LOG.md  04-REVIEW-FIX.md  04-SECURITY.md  04-UI-REVIEW.md  04-UI-SPEC.md
.planning/phases/05-notification-path-event-producers/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-CONTEXT.md  05-DISCUSSION-LOG.md
.planning/quick/260712-ndo-api-official-usage/: 260712-ndo-PLAN.md  260712-ndo-SUMMARY.md
.planning/quick/260713-fry-fix-compute-trends-corrupt-record-crash/: 260713-fry-PLAN.md  260713-fry-SUMMARY.md
.planning/quick/260714-cmt-strip-planner-residue-comments/: PLAN.md  SUMMARY.md
.planning/quick/260718-hgm-despike-dashboard-usage-trend-chart-seed/: 260718-hgm-PLAN.md  260718-hgm-SUMMARY.md
.planning/quick/260718-hz5-restructure-claude-monitor-py-into-4-mod/: 260718-hz5-CONTEXT.md  260718-hz5-PLAN.md  260718-hz5-SUMMARY.md
.planning/quick/260719-pzd-symlink-claude-hooks-claude-send-py-to-t/: 260719-pzd-PLAN.md  260719-pzd-SUMMARY.md
.planning/quick/260724-thm-tui-inherit-terminal-theme/: PLAN.md  SUMMARY.md
.planning/seeds/: SEED-001-usage-metrics-web-dashboard.md  SEED-002-predictive-quota-alerts.md  SEED-003-weekly-limit-monitoring.md  SEED-004-session-finished-desktop-notification.md  SEED-005-vscode-usage-status-bar.md  SEED-006-dashboard-usage-despike.md  SEED-007-tui-dashboard.md
.planning/ui-reviews/: .gitignore
.planning/workstreams/notifications-predictive-alerts/: MILESTONES.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/workstreams/notifications-predictive-alerts/milestones/: v1.3-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/workstreams/notifications-predictive-alerts/milestones/v1.4-phases/05-notification-path-event-producers/: 05-02-SUMMARY.md  05-03-SUMMARY.md
.planning/workstreams/notifications-predictive-alerts/milestones/v1.4-phases/06-notification-control-config/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-PATTERNS.md  06-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/milestones/v1.4-phases/07-live-session-view/: 07-03-PLAN.md  07-03-SUMMARY.md  07-REVIEW.md  07-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/milestones/v1.5-phases/08-daemon-socket-query-verb/: 08-02-PLAN.md  08-REVIEW.md  08-UAT.md
.planning/workstreams/notifications-predictive-alerts/milestones/v1.5-phases/09-terminal-dashboard-claude-tui-py/: 09-01-PLAN.md  09-02-PLAN.md  09-02-SUMMARY.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW.md
.planning/workstreams/notifications-predictive-alerts/phases/01-usage-quota-monitoring-in-the-tray/: 01-PLAN.md  01-RESEARCH.md  01-REVIEW.md
.planning/workstreams/notifications-predictive-alerts/phases/02-usage-history-persistence/: 02-CONTEXT.md  02-PLAN.md  02-REVIEW.md  02-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/phases/03-usage-trends-in-the-tray/: 03-01-PLAN.md  03-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/phases/04-usage-web-dashboard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-REVIEW.md  04-REVIEWS.md  04-SECURITY.md  04-UAT.md  04-UI-SPEC.md  04-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/phases/05-notification-path-event-producers/: 05-01-SUMMARY.md  05-RESEARCH.md  05-REVIEW.md  05-UAT.md
.planning/workstreams/notifications-predictive-alerts/phases/06-notification-control-config/: 06-01-PLAN.md  06-02-PLAN.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-REVIEW.md  06-UAT.md
.planning/workstreams/notifications-predictive-alerts/phases/07-live-session-view/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-REVIEW.md  07-UAT.md  07-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/phases/08-daemon-socket-query-verb/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-PATTERNS.md  08-UAT.md  08-VERIFICATION.md
.planning/workstreams/notifications-predictive-alerts/phases/09-terminal-dashboard-claude-tui-py/: 09-01-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-REVIEW-FIX.md  09-UAT.md
.planning/workstreams/notifications-predictive-alerts/phases/10-tui-polish-btop-style/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-REVIEW.md
.planning/workstreams/vscode/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/workstreams/vscode/phases/01-extension-foundation-usage-in-the-status-bar/: 01-RESEARCH.md
claude_monitor/: core.py  dashboard.py  test_claude_monitor.py
