[project]
name = "claude-code-tray"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = []

[tool.pyright]
# basedpyright (the LSP Zed runs) defaults to "recommended" mode, which floods a
# gi.repository/PyGObject script with reportUnknown*/reportMissing* warnings (~800+).
# Pin to "standard" -- pyright's own default -- so only real type errors surface.
typeCheckingMode = "standard"
# gi.repository submodules are generated at runtime and ship no stubs, so the import
# itself is unresolvable to any static checker. Silence it here (basedpyright surfaces
# it as reportMissingImports) rather than per-line.
reportMissingImports = false
# The repo root is an import root: the entry script claude-monitor.py imports the
# first-party `claude_monitor` package that sits beside it. At runtime Python resolves
# this via sys.path[0] (the symlink resolves to the repo dir); Pyright needs it spelled
# out or it reports `claude_monitor` as an unresolved import.
extraPaths = ["."]
# claude-monitor.py is a single-file PyGObject (gi.repository) script. The gi
# submodules (Gtk / GLib / Gio / AyatanaAppIndicator3) are generated at runtime
# and ship no type stubs, so Pyright cannot resolve their symbols or narrow the
# dynamically-typed values they hand back. The checks below fire only because of
# that dynamism -- turn them off here rather than salt the file with type: ignore.
reportAttributeAccessIssue = false   # "unknown import symbol" on gi.repository Gtk/GLib/Gio/AppIndicator
reportOptionalSubscript = false      # runtime-guarded dict access Pyright cannot prove non-None
reportOptionalOperand = false        # e.g. best_rate * 60 (see note in claude-monitor.py:470)
reportOperatorIssue = false          # `x in` / `not in` on a dict Pyright typed as Optional

[tool.ruff.lint.per-file-ignores]
# gi.repository imports MUST follow gi.require_version(); the lambda/one-liner are deliberate.
"claude-monitor.py" = ["E402", "E731", "E701"]
# demo() is the byte-identical selfcheck oracle moved here verbatim; its `ep = lambda`
# helper (E731) is part of that fixed body and must not be rewritten.
"claude_monitor/test_claude_monitor.py" = ["E731"]
